--- a/music game/index.html
+++ b/music game/index.html
@@ -13,7 +13,7 @@
     <div class="screen">
         <canvas id="myCanvas"></canvas>
     </div>
-
+    <button class="startBtn" onclick="playSound()">Start</button>
 
     <script src="song.js"></script>
     <script src="index.js"></script>
